<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.tutorial.check_weather.activity.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/headerCard"
        style="@style/customCard"
        android:layout_width="0dp"
        app:cardBackgroundColor="@color/green"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_gradient"
            android:paddingStart="10dp"
            android:paddingTop="12dp"
            android:paddingEnd="4dp"
            android:paddingBottom="26dp">

            <TextView
                android:id="@+id/lbTitle"
                style="@style/textStyle.header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="24sp"
                android:text="@string/lb_current_weather"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/bg_input"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="8dp"
                android:hint="@string/lb_enter_city_name"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textColorHint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/ivWeather"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/val_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCity"
        app:srcCompat="@drawable/sample_weather" />

    <TextView
        android:id="@+id/tvWeatherSign"
        style="@style/textStyle.header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lb_clouds"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWeather" />

    <TextView
        android:id="@+id/tvCity"
        style="@style/textStyle.header.green"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/lb_yangon"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerCard" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lb_few_clouds"
        style="@style/textStyle"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeatherSign" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/temperatureBlock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription">

        <TextView
            android:id="@+id/lbTemperature"
            style="@style/textStyle.header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/lb_temperature"
            app:layout_constraintEnd_toStartOf="@+id/tvTemperatureValue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTemperatureValue"
            style="@style/textStyle.header.green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/lb_27_c"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lbTemperature"
            app:layout_constraintTop_toTopOf="@id/lbTemperature" />

        <TextView
            android:id="@+id/lbFeelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/lb_feels_like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbTemperature" />

        <TextView
            android:id="@+id/lbMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_min"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@id/lbFeelsLike" />

        <TextView
            android:id="@+id/lbMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_max"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@id/lbFeelsLike" />

        <TextView
            android:id="@+id/tvFeelsLikeValue"
            style="@style/textStyle.green_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/lb_30_57_c"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbFeelsLike" />

        <TextView
            android:id="@+id/tvMinValue"
            style="@style/textStyle.green_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/lb_27_c"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/lbMin" />

        <TextView
            android:id="@+id/tvMaxValue"
            style="@style/textStyle.green_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_27_c"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@id/tvFeelsLikeValue" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="190dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="321dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/pressureBlock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperatureBlock">

        <TextView
            android:id="@+id/lbPressure"
            style="@style/textStyle.header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/lb_pressure"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvPressureValue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPressureValue"
            style="@style/textStyle.header.green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/lb_1010_hpa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lbPressure"
            app:layout_constraintTop_toTopOf="@id/lbPressure" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/humidityBlock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressureBlock">

        <TextView
            android:id="@+id/lbHumidity"
            style="@style/textStyle.header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/lb_humidity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvHumidityValue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHumidityValue"
            style="@style/textStyle.header.green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/lb_humidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lbHumidity"
            app:layout_constraintTop_toTopOf="@id/lbHumidity" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRefresh"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:insetBottom="0dp"
        android:text="@string/lb_refresh"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:cornerRadius="40dp"
        app:icon="@drawable/ic_refresh"
        app:iconGravity="textStart"
        app:iconTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPickLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPickLocation"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:insetBottom="0dp"
        android:text="@string/lb_pick_location"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:cornerRadius="40dp"
        app:icon="@drawable/ic_map"
        app:iconGravity="textStart"
        app:iconTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnRefresh"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>